Name:               tct
Version:            1.8
Author:             Martin Avanzini, 
                    Georg Moser, 
                    Andreas Schnabl
Category:           Math
Maintainer:         Martin Avanzini <martin.avanzini@uibk.ac.at>
Stability:          Experimental
License:            LGPL
License-file:       COPYING.LESSER
Homepage:           http://cl-informatik.uibk.ac.at/software/tct/
Synopsis:           A Complexity Analyser for Term Rewrite Systems
Description:
  The Tyrolean Complexity Tool (TCT) is a tool for automatically proving 
  (low) upper bounds on the derivational complexity and runtime complexity 
  of terminating term rewriting systems.
cabal-version:      >= 1.6
build-type:         Simple
Executable tct
 main-is:           Main.hs
 build-depends:     base>=4.0, haskell98, containers, HaXml, mtl, qlogic==0.8, termlib==0.8, parsec, pretty, parfold, dyre, unix, filepath, directory, regex-compat, satchmo>=1.7, satchmo-backends>=1.7, array, fgl, system-uuid, time, xhtml, ansi-wl-pprint >= 0.6 && < 0.7
 hs-source-dirs:    source
 ghc-options:       -threaded -O2 -fno-spec-constr-count

-- Executable tct_info
--  main-is:           StrategyInfo.hs
--  build-depends:     base>=4.0, haskell98, containers, HaXml, mtl, qlogic, termlib, parsec, pretty, parfold, dyre, unix, filepath, directory, regex-compat, satchmo>=1.7, satchmo-backends>=1.7, array, fgl, system-uuid, time
--  hs-source-dirs:    source
--  ghc-options:       -threaded -O2 -fno-spec-constr-count

Library
 exposed-modules:   Tct
                    Tct.Certificate
                    Tct.Main.Flags
                    Tct.Tcti
                    Tct.Main.Debug
                    Tct.Main.Version
                    Tct.Processor
                    Tct.Processor.Parse
                    Tct.Processor.Timeout
                    Tct.Processor.Orderings
                    Tct.Processor.Standard
                    Tct.Processor.Args
                    Tct.Processor.Args.Instances
                    Tct.Processor.PPrint
                    Tct.Processor.Transformations
                    Tct.Processor.LoggingSolver
                    Tct.Encoding.ArgumentFiltering
                    Tct.Encoding.Precedence
                    Tct.Encoding.SafeMapping
                    Tct.Encoding.UsablePositions
                    Tct.Encoding.Matrix
                    Tct.Encoding.Polynomial
                    Tct.Encoding.Relative
                    Tct.Encoding.Natring
                    Tct.Encoding.AbstractInterpretation
                    Tct.Encoding.HomomorphicInterpretation
                    Tct.Method.Combinator
                    Tct.Method.InnermostRuleRemoval
                    Tct.Method.PopStar
                    Tct.Method.EpoStar
                    Tct.Method.Compose
                    Tct.Method.ComposeRC
                    Tct.Method.Uncurry
                    Tct.Method.Matrix.MatrixInterpretation
                    Tct.Method.Matrix.NaturalMI
                    Tct.Method.Matrix.ArcticMI
                    Tct.Method.Poly.NaturalPI
                    Tct.Method.Poly.PolynomialInterpretation
                    Tct.Method.Bounds
                    Tct.Method.Bounds.Automata
                    Tct.Method.Bounds.Violations
                    Tct.Method.Bounds.Violations.Find
                    Tct.Method.Bounds.Violations.Fix
                    Tct.Method.Weightgap
                    Tct.Method.DP.DependencyGraph
                    Tct.Method.DP.UsableRules
                    Tct.Method.DP.DependencyPairs
                    Tct.Method.DP.Simplification
                    Tct.Method.DP.PathAnalysis
                    Tct.Method.DP.Utils
                    Tct.Method.Custom
                    Tct.Method.Predicates
                    Tct.Methods
                    Tct.Processors

 build-depends:     base>=4.0, haskell98, containers, HaXml, mtl, qlogic==0.8, termlib==0.8, parsec, pretty, parfold, dyre, unix, filepath, directory, regex-compat, satchmo>=1.7, satchmo-backends>=1.7, array, fgl, system-uuid, time, xhtml
 hs-source-dirs:    source
 if impl(ghc < 7.0)
    ghc-options:       -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count
 else
    ghc-options:       -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N